examples/test/testpolicy19806.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19806
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key20: value16
      key47: value39
      key12: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value46
          key44: value40
          key23: value36
